# haskell-test-framework

./: .gitignore  .travis.yml  cabal.haskell-ci  cabal.project
.github/workflows/: haskell-ci.yml
core/: ChangeLog.md  test-framework.cabal
core/Test/Framework/: Improving.hs  Seed.hs  Utilities.hs
core/Test/Framework/Runners/: Console.hs  Options.hs  Statistics.hs  XML.hs
core/Test/Framework/Runners/Console/: Run.hs  Table.hs
core/src/Test/Framework/: Core.hs  Options.hs
core/src/Test/Framework/Runners/: Console.hs  Core.hs  ThreadPool.hs
core/src/Test/Framework/Runners/Console/: Run.hs  Table.hs
core/src/Test/Framework/Runners/XML/: JUnitWriter.hs
core/test/: Tests.hs
core/test/Test/Framework/Tests/Runners/: XMLTests.hs
example/: test-framework-example.cabal
example/Test/Framework/: Example.lhs
hunit/: test-framework-hunit.cabal
hunit/Test/Framework/Providers/: HUnit.hs
quickcheck/: test-framework-quickcheck.cabal
quickcheck2/: ChangeLog.md  test-framework-quickcheck2.cabal
quickcheck2/Test/Framework/Providers/: QuickCheck2.hs
