Name:                test-framework-example
Version:             0.2.1
Cabal-Version:       >= 1.10
Category:            Testing
Synopsis:            Example testsuite for the test-framework package
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Max Bolingbroke <batterseapower@hotmail.com>
Homepage:            http://batterseapower.github.com/test-framework/
Build-Type:          Simple

Executable test-framework-example
        default-language:       Haskell2010

        Main-Is:                Test/Framework/Example.lhs

        Build-Depends:          test-framework             == 0.8.*
                              , test-framework-quickcheck2 == 0.3.*
                              , test-framework-hunit       == 0.3.*

        Build-Depends:          base                       >= 3   && < 5
                              , HUnit                      >= 1.2 && < 1.7
                              , QuickCheck                 >= 2.4 && < 2.11

        Ghc-Options:            -threaded
