Name:                test-framework-example
Version:             0.2.1
Cabal-Version:       >= 1.10
Category:            Testing
Synopsis:            Example test suite for the test-framework package
Description:         Example test suite for the @test-framework@ package.
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Max Bolingbroke <batterseapower@hotmail.com>
Homepage:            http://batterseapower.github.com/test-framework/
Build-Type:          Simple
Tested-With:         GHC==8.4.1, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4

Executable test-framework-example
        default-language:       Haskell2010

        Main-Is:                Test/Framework/Example.lhs

        Build-Depends:          test-framework             == 0.8.*
                              , test-framework-quickcheck2 == 0.3.*
                              , test-framework-hunit       == 0.3.*

        Build-Depends:          base                       >= 3   && < 5
                              , HUnit                      >= 1.2 && < 1.7
                              , QuickCheck                 >= 2.4 && < 2.13

        Ghc-Options:            -threaded
