Name:                test-framework-hunit
Version:             0.3.0.2
Cabal-Version:       >= 1.10
Category:            Testing
Synopsis:            HUnit support for the test-framework package.
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Haskell Libraries <libraries@haskell.org>
Homepage:            http://haskell.github.io/test-framework/
Bug-Reports:         https://github.com/haskell/test-framework/issues
Build-Type:          Simple
Description:         @HUnit@ support for the @test-framework@ package.
Tested-With:         GHC==8.10.1, GHC==8.8.3, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4

Library
    Default-Language:       Haskell2010
    Default-Extensions:     TypeOperators
                            MultiParamTypeClasses

    Exposed-Modules:        Test.Framework.Providers.HUnit

    Build-Depends:          test-framework        == 0.8.*
                          , base                  >= 4.3   && < 5
                          , HUnit                 >= 1.2   && < 1.7
                          , extensible-exceptions >= 0.1.1 && < 0.2.0

    Ghc-Options:            -Wall

Source-Repository head
    Type:     git
    Location: https://github.com/haskell/test-framework.git
    subdir:   hunit
