Name:                test-framework-quickcheck2
Version:             0.3.0.3
Cabal-Version:       >= 1.10
Category:            Testing
Synopsis:            QuickCheck2 support for the test-framework package.
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Haskell Libraries <libraries@haskell.org>
Homepage:            https://batterseapower.github.io/test-framework/
Bug-Reports:         https://github.com/haskell/test-framework/issues
Build-Type:          Simple
Description:         QuickCheck2 support for the test-framework package.
Tested-With:         GHC==8.2.1, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4

Library
        Default-Language:       Haskell2010
        Default-Extensions:     TypeSynonymInstances
                                TypeOperators
                                MultiParamTypeClasses
                                ExistentialQuantification
                                CPP

        Exposed-Modules:        Test.Framework.Providers.QuickCheck2

        Build-Depends:          test-framework        == 0.8.*

                              , QuickCheck            >= 2.4    && < 2.10
                              , base                  >= 4.3    && < 5
                              , extensible-exceptions >= 0.1.1  && < 0.2.0
                              , random                >= 1      && < 1.2

        Ghc-Options:            -Wall

Source-Repository head
  Type:     git
  Location: https://github.com/haskell/test-framework.git
  subdir:   quickcheck2
